[package]
name = "ext4-rs"
version = "0.1.0"
edition = "2021"
description = "A safe Rust wrapper for ext2/3/4 filesystem operations based on lwext4"
license = "BSD-3-Clause"
keywords = ["ext4", "ext3", "ext2", "filesystem", "embedded"]
categories = ["filesystem", "no-std"]

[dependencies]
lwext4-sys = { path = "../lwext4-sys" }
thiserror = "1.0"
bitflags = "2.0"
libc = "0.2"

[dev-dependencies]
tempfile = "3.0"

[features]
default = ["std"]
std = []
